# l3xz_openmv_camera

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros2.yml
camera_script/: main.py
l3xz_openmv_camera/: MANIFEST.in  package.xml  setup.cfg  setup.py
l3xz_openmv_camera/l3xz_openmv_camera/: camera_interface.py  l3xz_openmv_camera.py
l3xz_openmv_camera_interfaces/: CMakeLists.txt  package.xml
launch/: l3xz_openmv_camera.launch  openmv.py
scripts/: camera_interface.py  camera_script.py  l3xz_openmv_camera_node.py
srv/: gpio.srv  gpio_set.srv  rgb.srv
